# ms-swift-scripts

./: .gitignore  .gitmodules  README.md  pyproject.toml
ds_config/: zero3_offload.json
loss/: think_empty.jsonl  think_weighted.jsonl
scripts/: deploy.sh  eval.sh  export.sh  infer.sh  train_agent_14b.sh  train_agent_30b.sh  train_agent_30b_1.sh  train_agent_30b_mega.sh  train_agent_30b_mega_ds.sh  train_agent_30b_mega_test.sh  train_agent_30b_node.sh  train_agent_32b.sh  train_agent_32b_1.sh  train_agent_32b_bs.sh  train_agent_32b_packing.sh  train_agent_32b_packing_bs256.sh  train_agent_32b_packing_bs512.sh  train_agent_32b_padding_free.sh  train_agent_32b_think_empty.sh  train_agent_32b_think_weighted.sh  train_agent_ds_7b.sh  train_all.sh  train_condense.sh  train_general.sh  train_test.sh
src/: check_data.py  eval.py  infer.py  post.py  process_data.py  token_stats.py
template/: prompt.yaml
test/agent/agent_30b_v10/megatron_output/: args.json
test/agent/agent_30b_v10/megatron_output/runs/: events.out.tfevents.1748520066.shudian-214-2-2-20.5970.0
test/agent/agent_32b_v10/: args.json  logging.jsonl
